# aio_meilisearch

./: .gitignore  README.md  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
aio_meilisearch/: common.py  documents.py  index.py  indexes.py  models.py  types.py
aio_meilisearch/endpoints/: documents.py  indexes.py
tests/: conftest.py  test_common.py  test_documents.py  test_indexes.py  test_search.py  utils.py
