[tool.poetry]
name = "aio_meilisearch"
version = "0.1.0"
description = ""
authors = ["devtud <devtud@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-mock = "^3.1.0"
coverage = {extras = ["toml"], version = "^5.1"}
pytest-cov = "^2.9.0"
requests = "^2.23.0"
nox = "^2020.5.24"
docker = "^4.4.0"
black = "^20.8b1"

[tool.coverage.paths]
source = ["aio_meilisearch", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["aio_meilisearch"]

[tool.coverage.report]
fail_under = 100

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
